# gsd-book-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TASKS.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  gsd-conformance-notes.md  gsd-pr-recon.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/gsd-pr/: PR_BODY.md  PR_TITLE.txt  README_DIFF.md  STEP1_DISCUSSION_POST.md  SUBMISSION_RUNBOOK.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: README.md  book_config.json.example  launch_config.json.example
skill/: SKILL.md
skill/references/: aesthetic-libraries.md  canon-audit-methodology.md  cover-regen-troubleshooting.md  editorial-review-methodology.md  kdp-specifications.md  likeness-audit-methodology.md  phase-checklist.md  prompt-structure-guide.md
skill/scripts/: _config.py  build_book_md.py  build_print_pdf.py  build_social_pack.py  build_visual_companion.py  compose_cover_wrap.py  epub_embed_images.py  generate_back_cover.py  generate_chapter_images.py  generate_front_cover.py  make_bw_variants.py  postprocess.py
skill/templates/: back-cover-prompt.txt.template  book_config.json.template  chapter-image-prompt.txt.template  editorial-prompt.md.template  front-cover-prompt.txt.template  kdp-listing.md.template  launch_config.json.template
(+12 files in other folders)
