[project]
name = "kdp-book-launch"
version = "0.1.0"
description = "Claude Code skill for end-to-end Amazon KDP book launch — editorial review, AI cover/chapter image generation, EPUB + paperback/hardcover PDF builds, KDP listing prep."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jeremy Schoemaker", email = "jeremy@shoemoney.com" }]
dependencies = [
    "Pillow>=10.0",
    "pypdf>=4.0",
]

[project.urls]
Homepage = "https://github.com/shoemoney/gsd-book-skill"
Repository = "https://github.com/shoemoney/gsd-book-skill"
Issues = "https://github.com/shoemoney/gsd-book-skill/issues"
"Built on GSD" = "https://github.com/gsd-build/get-shit-done"
